Add endpoint to get update information of resource
