# common/common.messaging/common.messaging.resources/src/main/java/org/eclipse/slm/common/messaging/resources/ResourceMessageListener.java
@@ -1,6 +1,5 @@
 package org.eclipse.slm.common.messaging.resources;
 
-import jakarta.annotation.PostConstruct;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.amqp.core.Binding;
@@ -8,7 +7,6 @@ import org.springframework.amqp.core.BindingBuilder;
 import org.springframework.amqp.core.Queue;
 import org.springframework.amqp.core.TopicExchange;
 import org.springframework.amqp.rabbit.annotation.RabbitListener;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.stereotype.Component;
@@ -21,10 +19,13 @@ public abstract class ResourceMessageListener {
     @Value("${spring.application.name}")
     private String nameOfReceivingService;
 
-    public static final String QUEUE_NAME_PREFIX_RESOURCE_CREATED = "resource.created_";
 
     public String getResourceCreatedQueueName() {
-        return ResourceMessageListener.QUEUE_NAME_PREFIX_RESOURCE_CREATED + this.nameOfReceivingService;
+        return ResourceCreatedMessage.QUEUE_NAME_PREFIX_RESOURCE_CREATED + this.nameOfReceivingService;
+    }
+
+    public String getResourceInformationQueueName() {
+        return ResourceInformationFoundMessage.QUEUE_NAME_PREFIX_RESOURCE_INFORMATION + this.nameOfReceivingService;
     }
 
     @Bean
@@ -33,13 +34,26 @@ public abstract class ResourceMessageListener {
     }
 
     @Bean
-    public Binding declareBindingGeneric() {
-        var resourcesExchange = new TopicExchange(ResourceMessageSender.EXCHANGE_NAME);
+    public Queue resourceInformationQueue() {
+        return new Queue(this.getResourceInformationQueueName(), false);
+    }
 
+    @Bean
+    public Binding declareBindingResourceCreated() {
+        var resourcesExchange = new TopicExchange(ResourceMessageSender.EXCHANGE_NAME);
         return BindingBuilder.bind(resourceCreatedQueue()).to(resourcesExchange).with(ResourceCreatedMessage.ROUTING_KEY);
     }
 
-    @RabbitListener(queues =  ResourceMessageListener.QUEUE_NAME_PREFIX_RESOURCE_CREATED + "${spring.application.name}")
+    @Bean
+    public Binding declareBindingResourceInformation() {
+        var resourcesExchange = new TopicExchange(ResourceMessageSender.EXCHANGE_NAME);
+        return BindingBuilder.bind(resourceInformationQueue()).to(resourcesExchange).with(ResourceCreatedMessage.ROUTING_KEY);
+    }
+
+    @RabbitListener(queues =  ResourceCreatedMessage.QUEUE_NAME_PREFIX_RESOURCE_CREATED + "${spring.application.name}")
     public abstract void onResourceCreated(ResourceCreatedMessage resource);
+
+    @RabbitListener(queues =  ResourceInformationFoundMessage.QUEUE_NAME_PREFIX_RESOURCE_INFORMATION + "${spring.application.name}")
+    public abstract void onResourceInformationFound(ResourceInformationFoundMessage resourceInformationFoundMessage);
 
 }
