# resource_management/resource_management.service/resource_management.service.rest/src/main/java/org/eclipse/slm/resource_management/service/rest/capabilities/CapabilitiesManager.java
@@ -742,7 +742,7 @@ public class CapabilitiesManager implements IAwxJobObserverListener {
 //                            singleHostCapabilitiesConsulClient.addSingleHostCapabilityToNode(
 //                                    new ConsulCredential(),
 //                                    capability,
-//                                    jobDetails.getResourceId()
+//                                    jobDetails.resourceId()
 //                            );
                         }
 
